improved vertical alignment, fixed a visual bug on builders

--- a/front/src/app/components/core/game/navigation-game-info/navigation-game-info.component.scss
+++ b/front/src/app/components/core/game/navigation-game-info/navigation-game-info.component.scss
@@ -2,6 +2,9 @@
 	display: flex;
 	justify-content: space-around;
 	height: 100%;
+	gap: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 .wrapper-info{
 	display: flex;
