--- a/front/src/app/components/core/game/navigation/navigation.component.scss
+++ b/front/src/app/components/core/game/navigation/navigation.component.scss
@@ -53,7 +53,7 @@ app-global-parameter-pannel{
 	}
 }
 app-navigation-game-info{
-	width: 50%;
+	width: fit-content;
 	height: 40px;
 	border-top-right-radius: 0;
 	border-bottom-left-radius: 0;
